--- a/assets/config.json
+++ b/assets/config.json
@@ -1,3 +1,4 @@
 {
-    "repository_url": "https://github.com/egdw/GitBlog"
+    "repository_url": "https://github.com/egdw/GitBlog",
+    "api_url": "https://api.github.com/repos/egdw/GitBlog"
 }
