--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,5 @@
 {
     "repository_url": "https://github.com/egdw/GitBlog",
-    "api_url": "https://api.github.com/repos/egdw/GitBlog"
+    "api_url": "https://api.github.com/repos/egdw/GitBlog",
+    "blog_title": "恶搞大王的博客"
 }
