--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,6 @@
 {
     "repository_url": "https://github.com/egdw/GitBlog",
     "api_url": "https://api.github.com/repos/egdw/GitBlog",
-    "blog_title": "恶搞大王的博客"
+    "blog_title": "这是大标题",
+    "blog_small_title":"这是小标题."
 }
